Fix layout issues
Set the height to 100% vh
Add some inner structures

--- a/style.css
+++ b/style.css
@@ -1,16 +1,31 @@
 body {
     font-family: Roboto, Ubuntu, sans-serif;
     margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+.content {
     display: flex;
     flex: 1;
     flex-direction: column;
+   
     justify-content: center;
 }
 
-.container {
+.footer {
     display: flex;
-    flex-direction: column;
-    flex: 1;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
 }
 
 .header, .hero, .footer {
@@ -23,11 +38,7 @@ body {
     font-size: 24px;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-}
+
 
 ul {
     display: flex;
@@ -35,24 +46,62 @@ ul {
     list-style-type: none;
 }
 
-.footer {
-    text-align: center;
-    padding: 8px;
-}
+
+
+
 
 .hero {
     display: flex;
-    flex: 1;
+    flex-grow: 1;
 }
 
-.incipit {
-    
+.info {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.plants {
+    display: flex;
+    gap: 24px;
 }
 
 .quote {
-    
+    display: flex;
+    flex-grow: 1;
+    background-color: #E5E7Eb;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
 }
 
 .call {
-    
+    display: flex;
+    flex-grow: 1;
 }
+
+.blue, .glass, .gold, .sweet {
+    width: 200px;
+    flex-wrap: wrap;
+    border: 2px solid #3882F6;
+}
+
+.info-header {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 32px;
+}
+
+/*the borders go around the images, not the 
+entire plant info thing 
+
+// my most frustrating issue was not realizing
+that i needed to set a height for the body...
+turns out that i had to copy the 100%vh from 
+another exercise... did the .css/flex/ exercises
+all have the height set for me???
+
+*/
